--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
